<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SpotPost</string>
    <string name="title_activity_maps">Map</string>
    <string name="action_get_spotposts">Get SpotPosts</string>
    <string name="title_activity_post">PostActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="loading">loading...</string>
    <string name="action_settings">Settings</string>
    <string name="prompt_title">Title</string>
    <string name="prompt_content">Content</string>
    <string name="action_post_btn">Post It!</string>
    <string name="post_view_time">Time:</string>
    <string name="post_view_user">User:</string>
    <string name="post_view_rep">Reputation:</string>
    <string name="force_unlock_btn">Force Unlock</string>
    <string name="comment_str">Comments</string>
    <string name="new_comment_str">New Comment</string>
    <string name="post_comment">Post</string>

</resources>
