<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="me.spotpost.spotpost.PostViewActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:text="@string/loading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="30sp"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"/>

            <TextView
                android:id="@+id/content"
                android:text="@string/loading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageButton
                        android:id="@+id/upvote"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_action_collapse"/>
                    <ImageButton
                        android:id="@+id/downvote"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_action_expand"/>
                </LinearLayout>

                <Space
                    android:layout_width="30dp"
                    android:layout_height="match_parent"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:text="@string/post_view_user"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <Space
                            android:layout_width="10dp"
                            android:layout_height="match_parent"/>
                        <TextView
                            android:id="@+id/user"
                            android:text="@string/loading"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:text="@string/post_view_rep"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <Space
                            android:layout_width="10dp"
                            android:layout_height="match_parent"/>
                        <TextView
                            android:id="@+id/rep"
                            android:text="@string/loading"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:text="@string/post_view_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <Space
                            android:layout_width="10dp"
                            android:layout_height="match_parent"/>
                        <TextView
                            android:id="@+id/time"
                            android:text="@string/loading"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
